; ModuleID = '/home/carl/AnghaBench/linux/drivers/md/extr_raid5.c_is_full_stripe_write.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/md/extr_raid5.c_is_full_stripe_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stripe_head = type { i64, i64, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.stripe_head*)* @is_full_stripe_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_full_stripe_write(%struct.stripe_head* %0) #0 {
  %2 = alloca %struct.stripe_head*, align 8
  store %struct.stripe_head* %0, %struct.stripe_head** %2, align 8
  %3 = load %struct.stripe_head*, %struct.stripe_head** %2, align 8
  %4 = getelementptr inbounds %struct.stripe_head, %struct.stripe_head* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = load %struct.stripe_head*, %struct.stripe_head** %2, align 8
  %7 = getelementptr inbounds %struct.stripe_head, %struct.stripe_head* %6, i32 0, i32 1
  %8 = load i64, i64* %7, align 8
  %9 = load %struct.stripe_head*, %struct.stripe_head** %2, align 8
  %10 = getelementptr inbounds %struct.stripe_head, %struct.stripe_head* %9, i32 0, i32 2
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = sub nsw i64 %8, %13
  %15 = icmp sgt i64 %5, %14
  %16 = zext i1 %15 to i32
  %17 = call i32 @BUG_ON(i32 %16)
  %18 = load %struct.stripe_head*, %struct.stripe_head** %2, align 8
  %19 = getelementptr inbounds %struct.stripe_head, %struct.stripe_head* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = load %struct.stripe_head*, %struct.stripe_head** %2, align 8
  %22 = getelementptr inbounds %struct.stripe_head, %struct.stripe_head* %21, i32 0, i32 1
  %23 = load i64, i64* %22, align 8
  %24 = load %struct.stripe_head*, %struct.stripe_head** %2, align 8
  %25 = getelementptr inbounds %struct.stripe_head, %struct.stripe_head* %24, i32 0, i32 2
  %26 = load %struct.TYPE_2__*, %struct.TYPE_2__** %25, align 8
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %26, i32 0, i32 0
  %28 = load i64, i64* %27, align 8
  %29 = sub nsw i64 %23, %28
  %30 = icmp eq i64 %20, %29
  %31 = zext i1 %30 to i32
  ret i32 %31
}

declare dso_local i32 @BUG_ON(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
